Added a typo fix

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </h1>
         <p class="fs-5 mt-4 text-body-secondary">
           Every fractional professional needs a CFO sitting on their
-          shoulder, watching and providing finanial perspective, and direction.
+          shoulder, watching and providing financial perspective, and direction.
         </p>
         <br>
         <a class="btn btn-lg d-block d-md-inline btn-primary" target="calendly"
